:sparkles: Inject runtime environment variables using `runtime-env-cra`

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400,300,500,700,900,800,600">
     <title>Kubeshark</title>
+    <script src="%PUBLIC_URL%/runtime-env.js"></script>
   </head>
 
   <body>
